--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.9.2",
     "joi-country-extension": "^1.2.0",
     "joi-phone-number": "^5.1.1",
+    "logger": "^0.0.1",
     "logging-colorify-v2": "^1.0.0",
     "mongoose": "^7.4.3",
     "nodemailer": "^6.9.4",
